# monorepo

./: CLAUDE.md  mise.toml
.claude/skills/git-commit/: SKILL.md
.github/workflows/: master.yaml  merge.yaml
agents/: .gitignore  docker-compose.yml  mise.toml  pnpm-lock.yaml
agents/apps/web/: drizzle.config.ts  eslint.config.ts  package.json
agents/apps/web/src/app/: globals.css  layout.tsx  page.tsx
binance-modeling/: CLAUDE.md  pyproject.toml
binance-modeling/src/: main.py
deploy/: cloud-init.yaml
ghactivity/: docker-compose.yml  drizzle.config.ts  mise.toml  package.json  pnpm-lock.yaml
ghactivity/src/app/: client.tsx  layout.tsx  page.tsx
ghactivity/src/app/[username]/: client.tsx  page.tsx
ghactivity/src/components/: art-preview.tsx  theme-provider.tsx
ghactivity/src/db/: schema.ts
ghactivity/src/db/migrations/: 0000_burly_cerise.sql
ghactivity/src/lib/: art.ts  db.ts  github.ts  session.ts
ingest/: .prettierignore  CLAUDE.md  cloud-init.yaml  compose.yaml  eslint.config.js  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
ingest/binance/archive/: Dockerfile  package.json  tsconfig.json
ingest/binance/archive/src/: checksum.ts  downloader.ts  main.ts  types.ts  urls.ts
ingest/common/: package.json
ingest/common/src/: env.ts
ingest/kalshi/orderbooks/: Dockerfile  markets.txt  package.json
ingest/kalshi/orderbooks/src/: main.ts  ticker-archive.ts  types.ts  websocket.ts
ingest/kalshi/trades/: Dockerfile  package.json
ingest/kalshi/trades/src/: main.ts  types.ts
kalshi-trading/: CLAUDE.md  Dockerfile  cloud-init.yaml  compose.yaml  mise.toml  pyproject.toml
kalshi-trading/src/: auth.py  binance.py  kalshi_api.py  main.py  orderbook.py  pricing.py  trader.py
portfolio/: mise.toml
portfolio/src/app/: _globals.css  layout.tsx
portfolio/src/components/: theme.tsx
(+14 files in other folders)
