[project]
name = "binance-modeling"
version = "0.1.0"
description = "Backtesting models for Kalshi binary options on BTCUSDT."
requires-python = ">=3.12"
license = { text = "UNLICENSED" }

dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true

[dependency-groups]
dev = [
  "mypy>=1.8",
  "ruff>=0.15.2",
]
